Добавлен ховер в кнопку сверннуть чёрной панели / исправлен  баг закрытия бллока поиск в чёрной ппаннели

--- a/css/footer.css
+++ b/css/footer.css
@@ -113,7 +113,7 @@
             font-weight: bold; }
           .footer_info__section_time_namber i {
             font: 14px/20px Verdana;
-            font-weight: normal; }
+            font-weight: bold; }
         .footer_info__section_time_ps {
           width: 100%;
           font: 14px/20px Verdana;
