--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -142,7 +142,7 @@
           }
           i {
             font: 14px/20px Verdana;
-            font-weight: normal;
+            font-weight: bold;
           }
         }
         &_ps {
