--- a/sass/serch.scss
+++ b/sass/serch.scss
@@ -81,6 +81,9 @@
         display: block;
         letter-spacing: 0.6px;
         margin-top: 15px;
+        &:hover{
+          color: #620909;
+        }
       }
     }
   }
