--- a/css/black_panel.css
+++ b/css/black_panel.css
@@ -48,6 +48,8 @@
       border-radius: 5px;
       -moz-border-radius: 5px;
       -webkit-border-radius: 5px; }
+      .black_panel_header_close:hover i {
+        background-position: 0px -241px; }
       .black_panel_header_close i {
         display: inline-block;
         width: 51px;
