--- a/sass/header.scss
+++ b/sass/header.scss
@@ -185,6 +185,7 @@
           }
           b {
             font-size: 11px;
+            font-weight: bold;
           }
         }
       }
@@ -880,7 +881,7 @@
             font-weight: bold;
             i {
               font-size: 11px;
-              font-weight: normal;
+              font-weight: bold;
               margin: 0 4px;
 
             }
