--- a/css/style.css
+++ b/css/style.css
@@ -1292,7 +1292,8 @@ table {
         text-align: center; }
         .header_mini .header_kontakt .ring {
           display: inline-block;
-          float: none; } }
+          float: none;
+          cursor: auto; } }
   .header_mini .header_kontakt_action {
     display: none; }
   .header_mini .header_kontakt_line_button_line {
@@ -1314,11 +1315,13 @@ table {
       font: 16px/38px Verdana;
       font-weight: normal;
       font-weight: bold;
-      color: #840000; }
+      color: #840000;
+      cursor: auto; }
       @media (max-width: 405px) {
         .header_mini .header_kontakt_line .ring {
           float: none;
-          display: inline-block; } }
+          display: inline-block;
+          cursor: pointer; } }
       .header_mini .header_kontakt_line .ring span {
         font-size: 12px; }
       .header_mini .header_kontakt_line .ring p {
@@ -3567,7 +3570,7 @@ table {
         background-size: cover;
         text-align: center;
         padding: 0px; } }
-    @media (max-height: 550px) {
+    @media (max-height: 800px) {
       .power_calculator_header {
         display: none; } }
     .power_calculator_header i {
@@ -3625,7 +3628,7 @@ table {
           border-bottom: 1px solid #dedede;
           float: left;
           margin-top: 1px; }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form_base_zag {
               line-height: 26px; } }
           @media (max-width: 406px) {
@@ -3821,7 +3824,7 @@ table {
           border: 1px solid #dedede;
           border-right: none;
           float: left; }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form_more_zag {
               line-height: 26px; } }
           @media (max-width: 535px) {
@@ -3908,7 +3911,7 @@ table {
           margin-top: 32px;
           float: left;
           padding: 3px; }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form .button_line a {
               margin-top: 10px; } }
           .power_calculator_coontent_form .button_line a:hover {
@@ -3933,7 +3936,7 @@ table {
           -moz-opacity: 0.5;
           opacity: 0.5;
           -khtml-opacity: 0.5; }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form .button_line .selected_block {
               line-height: 22px; } }
           @media (max-width: 703px) {
@@ -3942,7 +3945,7 @@ table {
               float: none; } }
           .power_calculator_coontent_form .button_line .selected_block p {
             float: left; }
-            @media (max-height: 550px) {
+            @media (max-height: 800px) {
               .power_calculator_coontent_form .button_line .selected_block p {
                 margin-top: 10px; } }
           .power_calculator_coontent_form .button_line .selected_block a {
@@ -3956,7 +3959,7 @@ table {
             margin-left: 5px;
             pointer-events: none;
             cursor: default; }
-            @media (max-height: 550px) {
+            @media (max-height: 800px) {
               .power_calculator_coontent_form .button_line .selected_block a {
                 margin-top: 10px;
                 line-height: 22px; } }
@@ -3979,7 +3982,7 @@ table {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
               width: 100%;
               text-align: center; } }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
               min-height: 0px; } }
         .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
@@ -3991,7 +3994,7 @@ table {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
               width: 100%;
               text-align: center; } }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
               min-height: 0px; } }
     .power_calculator_coontent_rezult {
@@ -4007,7 +4010,7 @@ table {
       @media (max-width: 629px) {
         .power_calculator_coontent_rezult {
           padding-bottom: 20px; } }
-      @media (max-height: 550px) {
+      @media (max-height: 800px) {
         .power_calculator_coontent_rezult {
           min-height: 0;
           padding-bottom: 5px; } }
@@ -4043,7 +4046,7 @@ table {
               display: inline-block;
               float: none;
               margin-right: 0px; } }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_rezult_zag_block .logo {
               display: none; } }
         .power_calculator_coontent_rezult_zag_block h3 {
@@ -4055,7 +4058,7 @@ table {
             .power_calculator_coontent_rezult_zag_block h3 {
               display: inline-block;
               float: none; } }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_rezult_zag_block h3 {
               line-height: 26px; } }
       .power_calculator_coontent_rezult .power {
@@ -4083,7 +4086,7 @@ table {
           color: #212121;
           font-weight: bold;
           margin-bottom: 7px; }
-          @media (max-height: 550px) {
+          @media (max-height: 800px) {
             .power_calculator_coontent_rezult_block h4 {
               line-height: 22px; } }
           .power_calculator_coontent_rezult_block h4 i {
@@ -4105,7 +4108,7 @@ table {
             line-height: 10px;
             font-weight: bold;
             cursor: pointer; }
-            @media (max-height: 550px) {
+            @media (max-height: 800px) {
               .power_calculator_coontent_rezult_block h4 i {
                 margin-top: 5px; } }
         .power_calculator_coontent_rezult_block_input_line {
@@ -4116,7 +4119,7 @@ table {
             display: inline-block;
             margin-top: 10px;
             display: none; }
-            @media (max-height: 550px) {
+            @media (max-height: 800px) {
               .power_calculator_coontent_rezult_block_input_line .power_block {
                 margin-top: 5px; } }
             .power_calculator_coontent_rezult_block_input_line .power_block .namber {
@@ -4153,7 +4156,7 @@ table {
             box-sizing: border-box;
             background: #f8f8f8;
             min-width: 153px; }
-            @media (max-height: 550px) {
+            @media (max-height: 800px) {
               .power_calculator_coontent_rezult_block_input_line p {
                 line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p span {
@@ -4161,7 +4164,7 @@ table {
               margin-top: 14px;
               color: #662211;
               display: none; }
-              @media (max-height: 550px) {
+              @media (max-height: 800px) {
                 .power_calculator_coontent_rezult_block_input_line p span {
                   margin-top: 8px; } }
             .power_calculator_coontent_rezult_block_input_line p .namber {
@@ -4169,7 +4172,7 @@ table {
               font-weight: bold;
               color: #662211;
               display: none; }
-              @media (max-height: 550px) {
+              @media (max-height: 800px) {
                 .power_calculator_coontent_rezult_block_input_line p .namber {
                   line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p .no_namber {
